--- a/Drill/Week-2-In-Process.Rmd
+++ b/Drill/Week-2-In-Process.Rmd
@@ -1,4 +1,10 @@
+---
+output: word_document
+---
 
+```{r include=FALSE}
+require(DCF)
+```
 
 ### EXERCISES
 
@@ -148,7 +154,7 @@ In principle, the variables could be assigned to the other axes, but typically t
 
 Often, the size, shape, or color of the "dots" is used to show the value of another variable.  For instance:
 
-```{r echo=FALSE}
+```{r echo=FALSE, eval=FALSE}
 pheight + geom_point(aes(color=sex))
 ```
 
@@ -156,15 +162,21 @@ pheight + geom_point(aes(color=sex))
 
 What does this graph tell you about pregnancy?
 
-ggplot(data=NHANES, aes(x=pregnant, y=age)) + geom_violin()  + theme(legend.position="none") + labs(title="") 
+    ggplot(data=NHANES, aes(x=pregnant, y=age)) + 
+        geom_violin()  + theme(legend.position="none") + labs(title="") 
 
-ggplot(data=NHANES, aes(x=pregnant, y=age)) + geom_violin()  + aes(colour=sex) + facet_wrap(~smoker, ncol=4) + theme(legend.position="none") + labs(title="") + coord_flip() 
+    ggplot(data=NHANES, aes(x=pregnant, y=age)) + 
+        geom_violin()  + aes(colour=sex) + 
+        facet_wrap(~smoker, ncol=4) + theme(legend.position="none") +
+        labs(title="") + coord_flip() 
 
 ### Exercise:
 
 Make a graph to indicate whether smokers are systematically lower in weight than non-smokers.
 
-ggplot(data=NHANES, aes(x=smoker, y=BMI)) + geom_violin()  + theme(legend.position="none") + labs(title="")
+    ggplot(data=NHANES, aes(x=smoker, y=BMI)) + 
+    geom_violin()  + theme(legend.position="none") + 
+    labs(title="")
 
 ### EXERCISE
 
@@ -188,7 +200,7 @@ GIVE THE SMOKER DATA
 
 Make a graph from the smoker data that looks like the following.  (Hint: What variables are represented by which graphical attributes.) ACTUALLY: Ask them in a drill which variable is mapped to which graphical attribute.
 
-```{r echo=FALSE}
+```{r eval=FALSE}
 FracAliveSmoke %>% na.omit() %>% mutate( `Smoking Status`=smoker) %>% 
 ggplot(aes(y=fracAlive, x=`Smoking Status` ,fill=ageGroup))+
 geom_bar(stat='identity',position="dodge") + 
@@ -197,7 +209,7 @@ geom_bar(stat='identity',position="dodge") +
 ```
 
 Here's the same data, but with the glyph changed from a zero-based bar to a dot with position and color attributes:
-```{r echo=FALSE}
+```{r echo=FALSE,eval=FALSE}
 FracAliveSmoke %>% na.omit() %>% mutate( `Smoking Status`=smoker) %>% 
 ggplot(aes(x=ageGroup, y=fracAlive ,fill=`Smoking Status`))+
 geom_point(size=2, aes(color=`Smoking Status`)) + 
@@ -207,7 +219,7 @@ geom_point(size=2, aes(color=`Smoking Status`)) +
 
 Still another glyph: a bar showing the difference in survival between smokers and non-smokers.  The horizontal position of the bar is set by the age group.  The top of the bar is set by the non-smoker survival rate, the bottom by the smoker survival rate.
 
-```{r echo=FALSE}
+```{r eval=FALSE}
 FracAliveSmoke %>% 
   select(ageGroup,smoker,fracAlive) %>% 
   spread(smoker,fracAlive) %>% na.omit %>%
@@ -225,7 +237,7 @@ Stacked, Dodged, ...
 
 Make the survival by age and smoker a STACKED bar plot.  Why is this silly?
 
-```{r echo=FALSE}
+```{r eval=FALSE}
 FracAliveSmoke %>% na.omit() %>% mutate( `Smoking Status`=smoker) %>% 
 ggplot(aes(y=fracAlive, x=`ageGroup` ,fill=`Smoking Status`))+
 geom_bar(stat='identity',position="stack") + 
