Added maps to basic types of graphics

--- a/CourseNotes/GraphicsConstructDeconstruct/DraftNarrative.Rmd
+++ b/CourseNotes/GraphicsConstructDeconstruct/DraftNarrative.Rmd
@@ -58,7 +58,7 @@ Each dot is one case.  The position of that dot signifies the value of the two v
 
 A histogram shows how many cases fall into given ranges of the variable.  For instance, here's a histogram of heights from NHANES:
 
-```{r}
+```{r echo=FALSE}
 ggplot(NHANES, aes(x=height)) + 
     geom_histogram(aes(y = ..count..), 
                    binwidth=0.1, color="black", fill=NA) + 
@@ -71,7 +71,7 @@ A simple alternative to a histogram is a *frequency polygon*.  It's like a histo
 
 To illustrate, here's a frequency polygon of NHANES height. To show the relationship of the polygon with the histogram, the histogram has been drawn in the background. 
 
-```{r}
+```{r echo=FALSE}
 ggplot(NHANES, aes(x=height)) + 
     geom_freqpoly( aes(y= ..count..),binwidth=0.1,
                   color="black",fill=NA) + 
@@ -82,7 +82,7 @@ ggplot(NHANES, aes(x=height)) +
 
 Frequency polygons make it straightforward to include other variables, like sex:
 
-```{r}
+```{r echo=FALSE}
 ggplot(NHANES, aes(x=height)) + 
     geom_freqpoly(aes(y = ..count.., color=sex), 
                    binwidth=0.1, fill=NA) + 
@@ -162,17 +162,22 @@ At each age, smokers were less likely than non-smokers to have survived to the e
 
 ### Maps
 
-Using a map to plot data helps both to identify particular cases and to show spatial patterns and discrepancy.  
+Using a map to plot data helps both to identify particular cases and to show spatial patterns and discrepancy. 
+
+For the present, we'll use two mapping functions from the `mosaic` package.  These produce a world map or a map of US states. You specify the data table from which the mapped quantity is to be drawn, the name of the variable in the table that identifies the country or state, and a variable or expression on a variable that specifies how to choose the color for each country or state.  For instance: 
 
 ```{r echo=FALSE,message=FALSE}
-Growth <- CIAdata(2002)
-Growth$growth <- pmin(Growth$growth,5)
-p <- makeWorldMap( Growth, 'country')
-p + geom_polygon(col="gray",width=.5,aes(fill=growth)) +
-  xlab("Longitude") + ylab("Latitude") + ggtitle("Population Growth (% per year)") + 
-  scale_fill_continuous( low = "green", high = "red", space = "Lab",
-  na.value = "grey50", guide = "colourbar") 
+mosaic::mWorldMap( CountryData, 
+                   key="country", 
+                   fill="ntiles( inflation, 5,'interval')" )
 ```
+```{r echo=FALSE,message=FALSE}
+ZipGeography %>% 
+  group_by( State ) %>% 
+  summarise( totalPop=sum(Population, na.rm=TRUE) ) %>%
+  mUSMap( key="State", fill="log10(totalPop)")
+```
+
 
 From this map of population growth (in % per year), you can see the handful of countries with negative growth (that is, population decline) such as Russia and Poland.  The countries in Africa, with the exception of South Africa and Namibia, have fast population growth.  (A rate of 5% per year means that the population will double every 14 years.)  There is just one country with a large decline: Syria, just to the right of the center of the map.
 
